tests/invalids/invalidArray2.gt
proc main ()
    int a[1,]
begin 
    read m;
end
